# agenticpay

./: CONTRIBUTING.md  ENV_VARS.md  Frontend: Add dark mode persistence  IMPLEMENTATION_SUMMARY.md  README.md  package-lock.json
contracts/: .gitignore  .mythril.conf  .slither.toml  BatchSplitter.sol  Cargo.toml  EIP7702Delegator.sol  ERC20Gas.sol  MetaTxForwarder.sol  SplitterOptimized.sol  echidna.yaml  gas-analysis.md
contracts/bridges/: GenericBridge.sol  LayerZeroBridge.sol
contracts/evm/: .env.example  .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/evm/contracts/: BridgeHTLC.sol  SplitterV1.sol  SplitterV2.sol  TokenizedFiat.sol
contracts/evm/contracts/test/: BadSplitterV2.sol
contracts/evm/scripts/: deploy-create2.ts  deploy.ts  list-deployments.ts  propose-safe-upgrade.ts  rollback.ts  upgrade.ts  verify.ts
contracts/evm/scripts/lib/: deployment-store.ts  network.ts
contracts/evm/test/: DeploymentStore.test.ts  Splitter.test.ts  Upgrade.test.ts
contracts/scripts/: fuzz_test.sh
contracts/src/: lib.rs  security_properties.rs
contracts/src/zk-circuits/: age-verification.circom
contracts/target_local/: .rustc_info.json
contracts/target_local/debug/.fingerprint/addr2line-d9e19a1d0454a0df/: lib-addr2line  lib-addr2line.json
contracts/target_local/debug/.fingerprint/adler2-5ffaa4e3032ec6a1/: lib-adler2  lib-adler2.json
contracts/target_local/flycheck0/: stderr  stdout
contracts/test/properties/: echidna_tests.sol  haloria_tests.rs
(+661 files in other folders)
