[package]
name = "agenticpay"
version = "0.1.0"
edition = "2021"
authors = ["AgenticPay Team"]
description = "AI Agent Payment Infrastructure on Stellar/Soroban"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
honggfuzz = "0.5.55"
proptest = "1.4.0"
quickcheck = "1.0.3"
arbitrary = "1.3.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
